--- a/volunteer.html
+++ b/volunteer.html
@@ -486,7 +486,7 @@
 
 <!-- Ebot chat popup window -->
 
-<input type="checkbox" id="check"> <label class="chat-btn" for="check"> <i class="fa fa-commenting-o comment"></i> <i class="fa fa-close close"></i> </label>
+<!-- <input type="checkbox" id="check"> <label class="chat-btn" for="check"> <i class="fa fa-commenting-o comment"></i> <i class="fa fa-close close"></i> </label>
 <div class="chatblock">
   <div class="header">
     Welcome to Pharma Medica !!
@@ -498,7 +498,7 @@
     </div>
   </div>
 </div>
-
+ -->
 
       <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
       <script type="text/javascript" src="js/bootstrap.min.js"></script>
